--- a/proton-backend/app/views/layouts/proton/backend/application.html.erb
+++ b/proton-backend/app/views/layouts/proton/backend/application.html.erb
@@ -3,12 +3,25 @@
 <head>
   <title>Proton backend</title>
   <%= stylesheet_link_tag    "proton/backend/application", media: "all" %>
-  <%= javascript_include_tag "proton/backend/application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="nav-md">
+  <div class="container body">
+    <div class="main_container">
+      <div class="col-md-3 left_col">
+        <div class="left_col scroll-view">
+          <%= render 'layouts/proton/backend/logo' %>
+          <br>
+          <%= render 'layouts/proton/backend/menu' %>
+        </div>
+      </div>
+      <%= render 'layouts/proton/backend/top_nav' %>
+      <div class="right_col" role="main">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 
-<%= yield %>
-
+  <%= javascript_include_tag "proton/backend/application" %>
 </body>
 </html>
