Add top nav and signout button

--- a/proton-backend/app/views/layouts/proton/backend/_top_nav.html.erb
+++ b/proton-backend/app/views/layouts/proton/backend/_top_nav.html.erb
@@ -1,5 +1,19 @@
 <div class="top_nav">
   <div class="nav_menu">
-    <nav></nav>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="">
+          <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+            <%= current_user.email %>
+            <span class=" fa fa-angle-down"></span>
+          </a>
+          <ul class="dropdown-menu dropdown-usermenu pull-right">
+            <li>
+              <%= fa_icon_menu_link destroy_session_path, 'sign-out', 'Log Out', method: :delete %>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
