--- a/proton-backend/app/views/layouts/proton/backend/_menu.html.erb
+++ b/proton-backend/app/views/layouts/proton/backend/_menu.html.erb
@@ -2,11 +2,7 @@
     <div class="menu_section">
       <h3>General</h3>
       <ul class="nav side-menu">
-        <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-          <ul class="nav child_menu">
-            <li><a href="index.html">Dashboard</a></li>
-          </ul>
-        </li>
+        <li><%= fa_icon_link users_path, 'users', 'User' %></li>
       </ul>
     </div>
   </div>
