--- a/proton-backend/app/views/proton/backend/users/new.html.erb
+++ b/proton-backend/app/views/proton/backend/users/new.html.erb
@@ -1,4 +1,5 @@
 <% content_for :tab_content do %>
+  <div id="form-alert-container"></div>
   <%= form_with model: @user, class: 'form-horizontal form-label-left' do |f| %>
     <div class="form-group">
       <%= f.label :email, class: 'control-label col-md-3 col-sm-3 col-xs-12' %>
