Add Layout manager into backend

--- a/proton-backend/app/views/layouts/proton/backend/_menu.html.erb
+++ b/proton-backend/app/views/layouts/proton/backend/_menu.html.erb
@@ -2,6 +2,7 @@
     <div class="menu_section">
       <h3>General</h3>
       <ul class="nav side-menu">
+        <li><%= fa_icon_link layouts_path, 'align-center', 'Layout' %></li>
         <li><%= fa_icon_link users_path, 'users', 'User' %></li>
       </ul>
     </div>
