--- a/proton-backend/app/views/proton/backend/layouts/_form.html.erb
+++ b/proton-backend/app/views/proton/backend/layouts/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="form-group">
     <%= f.label :content, class: 'control-label col-md-3 col-sm-3 col-xs-12' %>
     <div class="col-md-6 col-sm-6 col-xs-12">
-        <%= f.text_area :content, class: 'form-control col-md-7 col-xs-12' %>
+        <%= f.text_area :content, class: 'form-control col-md-7 col-xs-12 form-control---cm' %>
       </div>
   </div>
   <div class="ln_solid"></div>
@@ -23,4 +23,10 @@
         <%= f.submit 'Submit', class: 'btn btn-success' %>
       </div>
     </div>
+<% end %>
+
+<% content_for :script do %>
+  <script>
+    init_codemirror($('.form-control---cm'), {lineNumbers: true, mode: 'htmlmixed'});
+  </script>
 <% end %>
