--- a/proton-backend/app/views/proton/backend/layouts/_form.html.erb
+++ b/proton-backend/app/views/proton/backend/layouts/_form.html.erb
@@ -1,27 +1,19 @@
-<%= form_with model: @layout, class: 'form-horizontal form-label-left', data: {'parsley-validate' => true} do |f| %>
-  <div class="form-group">
-    <%= f.label :title, class: 'control-label col-md-3 col-sm-3 col-xs-12' %>
-    <div class="col-md-6 col-sm-6 col-xs-12">
-        <%= f.text_field :title, class: 'form-control col-md-7 col-xs-12', required: true %>
-      </div>
+<%= form_with model: @layout, data: {'parsley-validate' => true} do |f| %>
+  <div class="form-group col-md-6 col-sm-6 col-xs-12">
+    <%= f.label :title, class: 'control-label' %>
+    <%= f.text_field :title, class: 'form-control', required: true %>
+  </div>
+  <div class="form-group col-md-6 col-sm-6 col-xs-12">
+    <%= f.label :identify, class: 'control-label' %>
+    <%= f.text_field :identify, class: 'form-control', required: true %>
   </div>
   <div class="form-group">
-    <%= f.label :identify, class: 'control-label col-md-3 col-sm-3 col-xs-12' %>
-    <div class="col-md-6 col-sm-6 col-xs-12">
-        <%= f.text_field :identify, class: 'form-control col-md-7 col-xs-12', required: true %>
-      </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :content, class: 'control-label col-md-3 col-sm-3 col-xs-12' %>
-    <div class="col-md-6 col-sm-6 col-xs-12">
-        <%= f.text_area :content, class: 'form-control col-md-7 col-xs-12 form-control---cm' %>
-      </div>
+    <%= f.label :content, class: 'control-label' %>
+    <%= f.text_area :content, class: 'form-control form-control---cm' %>
   </div>
   <div class="ln_solid"></div>
     <div class="form-group">
-      <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-        <%= f.submit 'Submit', class: 'btn btn-success' %>
-      </div>
+      <%= f.submit 'Submit', class: 'btn btn-success' %>
     </div>
 <% end %>
 
