--- a/proton-backend/app/views/proton/backend/layouts/_tab.html.erb
+++ b/proton-backend/app/views/proton/backend/layouts/_tab.html.erb
@@ -13,7 +13,7 @@
         </li>
       </ul>
 
-      <div class="tab-content">
+      <div class="tab-content container">
         <%= yield(:tab_content) %>
       </div>
     </div>
