Update and create layout

--- a/proton-backend/app/views/proton/backend/layouts/_tab.html.erb
+++ b/proton-backend/app/views/proton/backend/layouts/_tab.html.erb
@@ -14,7 +14,8 @@
       </ul>
 
       <div class="tab-content container">
-        <%= yield(:tab_content) %>
+        <div id="form-alert-container"></div>
+        <%= yield :tab_content %>
       </div>
     </div>
   </div>
