--- a/proton-backend/app/views/proton/backend/layouts/index.html.erb
+++ b/proton-backend/app/views/proton/backend/layouts/index.html.erb
@@ -15,7 +15,7 @@
               <% @layouts.each do |layout| %>
                 <tr>
                   <td><%= layout.title %></td>
-                  <td><%= layout.Identify %></td>
+                  <td><%= layout.identify %></td>
                   <td><%= link_to 'Edit', edit_layout_path(layout) %></td>
                 </tr>
               <% end %>
