--- a/proton-backend/app/views/layouts/proton/backend/_menu.html.erb
+++ b/proton-backend/app/views/layouts/proton/backend/_menu.html.erb
@@ -3,6 +3,7 @@
       <h3>General</h3>
       <ul class="nav side-menu">
         <li><%= fa_icon_link layouts_path, 'align-center', 'Layout' %></li>
+        <li><%= fa_icon_link pages_path, 'file-code-o', 'Page' %></li>
         <li><%= fa_icon_link users_path, 'users', 'User' %></li>
       </ul>
     </div>
