--- a/proton-backend/app/views/proton/backend/pages/_form.html.erb
+++ b/proton-backend/app/views/proton/backend/pages/_form.html.erb
@@ -27,6 +27,9 @@
   <div class="ln_solid"></div>
     <div class="form-group">
       <%= f.submit 'Submit', class: 'btn btn-success' %>
+      <% unless @page.new_record? %>
+        <%= link_to 'Preview', preview_page_path(@page), class: 'btn btn-info', target: '_blank' %>
+      <% end %>
     </div>
 <% end %>
 
