--- a/proton-backend/app/views/proton/backend/pages/index.html.erb
+++ b/proton-backend/app/views/proton/backend/pages/index.html.erb
@@ -18,7 +18,11 @@
                   <td><%= page.title %></td>
                   <td><%= page.identify %></td>
                   <td><%= page.url %></td>
-                  <td><%= link_to 'Edit', edit_page_path(page) %></td>
+                  <td>
+                    <%= link_to 'Edit', edit_page_path(page) %>
+                     | 
+                    <%= link_to 'Preview', preview_page_path(page), target: '_blank' %>
+                  </td>
                 </tr>
               <% end %>
             </tbody>
