Refactor Post edit with mithril and medium-editor

--- a/proton-backend/app/views/proton/backend/posts/_tab.html.erb
+++ b/proton-backend/app/views/proton/backend/posts/_tab.html.erb
@@ -6,7 +6,7 @@
           <li role="presentation" class="active"><a href="javascript;;">Edit</a></li>
         <% end %>
         <li role="presentation" class="<%= 'active' if action_name == 'new' %>">
-          <%= link_to 'New', new_post_path %>
+          <%= link_to 'New', new_post_path, target: '_blank' %>
         </li>
         <li role="presentation" class="<%= 'active' if action_name == 'index' %>">
           <%= link_to 'List', posts_path %>
