--- a/proton-backend/app/views/proton/backend/posts/_form.html.erb
+++ b/proton-backend/app/views/proton/backend/posts/_form.html.erb
@@ -1,25 +1,13 @@
 <%= form_with model: @post, id: 'post_form', data: {remote: false, 'parsley-validate' => true} do |f| %>
   <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="form-group">
-      <%= f.label :title, class: 'control-label' %>
-      <%= f.text_field :title, class: 'form-control', required: true %>
+      <%= f.text_field :title, class: 'form-control post-title', required: true, placeholder: 'Title' %>
     </div>
 
     <div class="form-group">
-      <%= render 'proton/backend/share/editor_tools', for_which: '#editor' %>
-      <div id="editor" class="editor-wrapper"></div>
+      <div id="editor" class="editorable"></div>
     </div>
 
     <div class="clearfix"></div>
-    <div class="ln_solid"></div>
-      <div class="form-group">
-        <%= f.submit 'Submit', class: 'btn btn-success' %>
-      </div>
   </div>
-<% end %>
-
-<% content_for :script do %>
-<script>
-  initPostForm();
-</script>
 <% end %>
